Added circular loaders and handled errors.

--- a/appfrontend/src/css/App.css
+++ b/appfrontend/src/css/App.css
@@ -45,3 +45,9 @@
   margin-right: 0px;
   margin-left: auto;
 }
+
+/* Disables error stacktrace from showing up in dev mode. */
+iframe
+{
+    display: none;
+}
