Added standard profile pictures for user types.

--- a/appfrontend/src/css/Profile.css
+++ b/appfrontend/src/css/Profile.css
@@ -11,10 +11,16 @@
     padding: 0px;
 }
 
-
 .profile-details h4 {
     margin: 0px;
     padding: 0px;
     padding-bottom: 10px;
 }
 
+.profile-picture {
+    height: 120px;
+    width: 120px;
+    border-radius: 100%;
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
